# SuperKMeans

./: .gitignore  BENCHMARKING.md  CMakeLists.txt  INSTALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: CMakeLists.txt  ad_hoc_assign.cpp  ad_hoc_hierarchical_superkmeans.cpp  ad_hoc_superkmeans.cpp  cohere_bench_superkmeans.cpp
benchmarks/end_to_end/: end_to_end_evoc.py  end_to_end_fast_kmeans.cpp  end_to_end_hierarchical.cpp  end_to_end_mlpack.py  end_to_end_superkmeans.cpp
benchmarks/results/graniterapids/: elkan.csv
examples/: CMakeLists.txt
include/superkmeans/: common.h  superkmeans.h
include/superkmeans/distance_computers/: batch_computers.h
python/bindings/: bindings.cpp
python/superkmeans/: __init__.py
python/tests/: test_superkmeans.py
scripts/ci/: build_linux_deps.sh  build_macos_deps.sh
tests/: CMakeLists.txt  test_assign.cpp
tests/fetchcontent_test/: CMakeLists.txt  main.cpp
