[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "superkmeans"
version = "0.1.0"
description = "A Super fast K-Means library for High-Dimensional vectors on CPUs (x86, ARM) and GPUs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Leonardo Kuffo", email = "lxkr@cwi.nl"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/cwida/superkmeans"
Repository = "https://github.com/cwida/superkmeans"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["python/superkmeans"]
cmake.build-type = "Release"

cmake.args = [
    "-DSKMEANS_COMPILE_TESTS=OFF",
    "-DSKMEANS_COMPILE_BENCHMARKS=OFF",
    "-DSKMEANS_COMPILE_EXAMPLES=OFF"
]

[tool.scikit-build.cmake.define]
SKMEANS_PORTABLE = {env = "SKMEANS_PORTABLE", default = "OFF"}
SKMEANS_SKIP_FFTW = {env = "SKMEANS_SKIP_FFTW", default = "OFF"}

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win*"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests -v"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
archs = ["auto"]
before-all = "bash {project}/scripts/ci/build_linux_deps.sh"
environment = { SKMEANS_PORTABLE="ON", SKMEANS_SKIP_FFTW="ON" }

[tool.cibuildwheel.macos]
archs = ["auto"]
before-all = "bash {project}/scripts/ci/build_macos_deps.sh"
environment = { CC="clang", CXX="clang++", SKMEANS_PORTABLE="ON", SKMEANS_SKIP_FFTW="ON", OpenMP_ROOT="/usr/local" }

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
